log/build_2025-01-20_19-19-34/jst_gmt/stderr.log
  File "/home/yuki/ros2_ws/install/jst_gmt/lib/python3.8/site-packages/jst_gmt/talker.py", line 1
    import rclpy
                      ^
SyntaxError: invalid character in identifier

